test/files/neg/macro-invalidsig-params-badvarargs.check
Impls_Macros_1.scala:8: error: macro implementation has wrong shape:
 required: (c: scala.reflect.makro.Context)(x: c.Expr[Int], y: c.Expr[Int]): c.Expr[Any]
 found   : (c: scala.reflect.makro.Context)(xs: c.Expr[Int]*): Nothing
parameter lists have different length, required extra parameter y: c.Expr[Int]
  def foo(x: Int, y: Int) = macro Impls.foo
                                        ^
one error found
